--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "views",
+  "name": "project2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server",
