--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server",
+    "test-db-connection": "node models/connection.js",
     "seed": "node models/seed.js"
   },
   "keywords": [],
