--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "freezeframe": "^5.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.19",
     "morgan": "^1.10.0"
