--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project2",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "connection.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server",
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "freezeframe": "^5.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.19",
